Release CMTK-1.2.2:

- Added: bitwise "and" operation in "imagemath" tool. Added test for this.
- Testing: added tests for cmtk::TypedArraySimilarity class.
- Fixed: TypedArraySimilarity::GetPeakSignalToNoiseRatio was broken due to
    negated GetMeanSquaredDifference return value.
- Testing: added tests for cmtk::ScalarImageSimilarity class (and, by
    extension, cmtk::TypedArraySimilarity as well).
- Removed: obsolete "ImageIO" class was removed; the only two remaining former
    derived classes, cmtk::PGM and cmtk::DICOM, will now be used directly, as
    they only have static member functions left.
- Fixed: initialize memory for Analyze header with zeroes in "mk_analyze_hdr"
    tool.
- Testing: added tests for "mk_analyze_hdr" tool.
- Testing: added tests for "mat2dof" tool.
- Fixed: "mip" tool did not compute projection images with proper pixel sizes
    based on the input volume.
- Testing: added tests for "mip" tool.
- Improved: "mip" tool now sets black and white points automatically if not
    provided by the user.
- Testing: added test for "Rohlfing" single-image intensity-consistent
    filtering in "filter" tool.
- Removed: further removal of obsolete PGM and DICOM I/O code.


Release CMTK-1.2.1 (2010-02-01):

- Added: "statistics" tool now optionally outputs mask-based results for all
    up to a user-provided maximum label, even if not all labels in the range
    actually occur in the mask.
- Added: "convertx" tool now does thresholding above and below threshold, to
    threshold and to padding.
- Added: re-added missing "--fast" switch for warp and warpx tools.
- Added: "imagemath" can now threshold above and below given values.
- Added: "convertx" tool can now rescale image intensities to target range
    using "--scale-to-range" operation.

- Fixed: reading empty (i.e., zero pixels) images crashed the toolkit
- Fixed: "reformatx" did not respect user-defined padding value when computing
    Jacobian maps (Issue #4564).